Add URL to the calendar booking page into caldav availability calendar
